Fix spacing on about page.

--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -30,11 +30,10 @@ h1 {
 
 .Profile-intro {
   width: 100%;
-  height: 40rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 3.5rem;
+  margin-bottom: 0.5rem;
   margin-right: auto;
   margin-left: auto;
 
@@ -43,10 +42,11 @@ h1 {
   }
 
   @include devices(desktop) {
-    height: 43rem;
+    height: unset;
     flex-direction: row;
     justify-content: center;
     padding: 0 5rem;
+    margin-bottom: 4rem;
   }
 
   &__image {
